--- a/PilotCenterTSZ/PilotCenterTSZ.csproj
+++ b/PilotCenterTSZ/PilotCenterTSZ.csproj
@@ -108,6 +108,12 @@
     <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdminUI\AdminDash.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AdminUI\AdminDash.Designer.cs">
+      <DependentUpon>AdminDash.cs</DependentUpon>
+    </Compile>
     <Compile Include="Dashboard.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -184,6 +190,9 @@
     <Compile Include="UI\PilotCarrer.Designer.cs">
       <DependentUpon>PilotCarrer.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="AdminUI\AdminDash.resx">
+      <DependentUpon>AdminDash.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Dashboard.resx">
       <DependentUpon>Dashboard.cs</DependentUpon>
       <SubType>Designer</SubType>
@@ -312,10 +321,6 @@
     <None Include="Resources\B767.png" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\AdminCenter\AdminCenter.csproj">
-      <Project>{14c9ace5-9fe0-495b-a8a6-e5268d414d1c}</Project>
-      <Name>AdminCenter</Name>
-    </ProjectReference>
     <ProjectReference Include="..\ExamCenterUpdate\ExamCenterUpdate.csproj">
       <Project>{2b047db0-e6ae-4a01-974e-d1253d73ca51}</Project>
       <Name>ExamCenterUpdate</Name>
@@ -342,6 +347,8 @@
     <None Include="Resources\rvsmetops.png" />
     <None Include="Resources\2000px-Oxygen480-actions-system-shutdown.svg.png" />
     <None Include="Resources\Minimize_Box_Blue.png" />
+    <None Include="Resources\pilot_resume-256.png" />
+    <None Include="Resources\businessman.png" />
     <Content Include="tszbanner.ico" />
   </ItemGroup>
   <ItemGroup>
