added auto deploy with travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,12 @@ language: csharp
 solution: "./PilotCenterTSZ.sln"
 script:
 - xbuild /p:Configuration=Travis ./PilotCenterTSZ.sln
+after_success:
+- cd Acars/bin/Travis && zip -r ../../../travis-build.zip . && cd ../../..
+deploy:
+  provider: releases
+  api_key: "$GH_TOKEN"
+  file: "travis-build.zip"
+  skip_cleanup: true
+  on:
+    tags: true
